--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,12 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/favicon.ico",
+              "src/assets",
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "./node_modules/svg-country-flags/svg/",
+                "output": "./assets/svg-country-flags/svg/"
               }
             ],
             "styles": [
