--- a/package.json
+++ b/package.json
@@ -10,20 +10,25 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-extensions/select-country": "^17.0.0",
     "@angular/animations": "^18.2.9",
     "@angular/cdk": "^18.2.8",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
     "@angular/forms": "^18.2.0",
+    "@angular/google-maps": "^18.2.11",
     "@angular/material": "^18.2.8",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@maptiler/client": "^2.0.0",
+    "@maptiler/sdk": "^2.4.1",
     "bootstrap": "^5.3.3",
     "ngx-cookie-service": "^18.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
+    "svg-country-flags": "^1.2.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
