--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,10 @@
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
+
+    "allowSyntheticDefaultImports": true,
+    "noImplicitAny": false,
+
     "skipLibCheck": true,
     "isolatedModules": true,
     "esModuleInterop": true,
@@ -28,6 +32,7 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "strictNullChecks": false
   }
 }
